<resources>
    <string name="app_name">My Self Apps</string>

    <string name="home">Home</string>
    <string name="dailyact">Daily Activity</string>
    <string name="fav">Favourite</string>
    <string name="musicvid">Music and Video</string>
    <string name="gallery">Gallery</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
